--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,19 @@
-PORT =
-MONGO_URI = ''
+# Server Configuration
+PORT=5000
+
+# MongoDB Connection
+# Format: mongodb+srv://username:password@cluster.mongodb.net/database_name?appName=app_name
+MONGO_URI=your_mongodb_connection_string_here
+
+# JWT Configuration
+JWT_SECRET=your_random_jwt_secret_key_minimum_32_characters
+JWT_EXPIRE=30d
+
+# Cloudinary Configuration (for image uploads)
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
+CLOUDINARY_UPLOAD_PRESET=your_cloudinary_upload_preset
+
+# Environment
+NODE_ENV=development
